--- a/admin-panel/public/index.html
+++ b/admin-panel/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +22,56 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <style>
+      .loader {
+        width: 250px;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        position: absolute;
+        top: 300px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: helvetica, arial, sans-serif;
+        text-transform: uppercase;
+        font-weight: 900;
+        color: #ce4233;
+        letter-spacing: 0.2em;
+      }
+      .loader::before,
+      .loader::after {
+        content: '';
+        display: block;
+        width: 15px;
+        height: 15px;
+        background: #ce4233;
+        position: absolute;
+        animation: load 0.7s infinite alternate ease-in-out;
+      }
+      .loader::before {
+        top: 0;
+      }
+      .loader::after {
+        bottom: 0;
+      }
+      @keyframes load {
+        0% {
+          left: 0;
+          height: 30px;
+          width: 15px;
+        }
+        50% {
+          height: 8px;
+          width: 40px;
+        }
+        100% {
+          left: 235px;
+          height: 30px;
+          width: 15px;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
